fix spider award on mobile

--- a/files/assets/events/homoween/css/main_homoween.css
+++ b/files/assets/events/homoween/css/main_homoween.css
@@ -232,43 +232,19 @@ body::after {
 .spider:nth-child(2) {
 	animation-delay: 250ms;
 	animation-duration: 2100ms;
-	left: 20%;
+	left: 30%;
 }
 
 .spider:nth-child(3) {
 	animation-delay: 300ms;
 	animation-duration: 1600ms;
-	left: 30%;
+	left: 50%;
 }
 
 .spider:nth-child(4) {
 	animation-delay: 400ms;
-	animation-duration: 1800ms;
-	left: 40%;
-}
-
-.spider:nth-child(5) {
-	animation-delay: 240ms;
-	animation-duration: 1900ms;
-	left: 50%;
-}
-
-.spider:nth-child(6) {
-	animation-delay: 250ms;
-	animation-duration: 2300ms;
-	left: 60%;
-}
-
-.spider:nth-child(7) {
-	animation-delay: 400ms;
-	animation-duration: 2100ms;
-	left: 70%;
-}
-
-.spider:nth-child(8) {
-	animation-delay: 4000ms;
 	animation-duration: 200ms;
-	left: 80%;
+	left: 70%;
 }
 
 .spider {
@@ -281,6 +257,30 @@ body::after {
 	transform-origin: top;
 	transition: 0.8s ease-in-out;
 	pointer-events: none;
+}
+
+
+@media (max-width: 768px) {
+	.spider {
+		zoom: 0.5;
+	}
+}
+
+@media (max-width: 768px) {
+	@supports (-moz-appearance:none) {
+		.spider {
+			left: 5%;
+		}
+		.spider:nth-child(2) {
+			left: 20%;
+		}
+		.spider:nth-child(3) {
+			left: 35%;
+		}
+		.spider:nth-child(4) {
+			left: 50%;
+		}
+	}
 }
 
 .spider:hover .body {
@@ -327,19 +327,18 @@ body::after {
 
 .spider .body .eye:after {
 	background: #222;
-	width: 7px;
-	height: 7px;
+	width: 16px;
+	height: 16px;
 	content: "";
 	display: block;
 	margin: 55%;
 	border-radius: 50%;
-
 	animation: look 4s infinite;
 }
 
-.spider:nth-child(8) .body .eye {
-  background-color: #FF0000;
-  background: radial-gradient(#FF9B9B, #FF0000);
+.spider:nth-child(4) .body .eye {
+	background-color: #FF0000;
+	background: radial-gradient(#FF9B9B, #FF0000);
 }
 
 .spider:nth-child(odd) .body .eye:after {
@@ -441,7 +440,7 @@ body::after {
 	position: fixed;
 	bottom:0;
 	left: 0;
-	width:100%;
+	width: 100%;
 	height: 100%;
 	z-index: 1031;
 }
@@ -722,11 +721,6 @@ body::after {
 
 #cursormarsey {
 	background-image: url('/assets/events/homoween/images/cursormarsey.webp?x=6') !important;
-}
-
-.spider .body .eye::after {
-	width: 16px;
-	height: 16px;
 }
 
 .post-flair {
